--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -21,13 +21,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'  # Specify the Python version you are using
+          python-version: '3.12'  # Specify the Python version you are using
 
       # Step 3: Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r mlops_env/requirements.txt 
+          pip install -r requirements.txt 
 
       # Step 4: Run tests
       - name: Run tests
